# office-parser

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  roadmap.md
cli/: CHANGELOG.md  Cargo.toml  README.md
cli/src/: main.rs
cli/tests/: cli.rs
docs/: charts-diagrams.md  cli.md  formats.md  index.md  library-usage.md  release.md  spreadsheets.md  v3-ingestion.md
src/: document.rs  document_ast.rs  lib.rs  render.rs  spreadsheet.rs
src/formats/: _sdk_parsers_mod.rs  config_mdkv.rs  csv.rs  docx.rs  epub.rs  json.rs  mmap.rs  mod.rs  odp.rs  ods_sheet.rs  odt.rs  pdf.rs  pptx.rs  rtf.rs  spreadsheet.rs  toml.rs  tsv.rs  xlsx.rs  xmind.rs  xml.rs  yaml.rs
tests/: config_mdkv.rs  docx_odt_parity.rs  epub_basic.rs  mindmap_formats.rs  presentation_refactor.rs  semantic.rs  spreadsheet_styles_and_group_by.rs  spreadsheets.rs  xml_basic.rs
tests/fixtures/: docx_headings_lists_tables_images.docx  odt_headings_lists_tables.odt  people.csv  people.tsv  rtf_basic.rtf
